// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`To-Do list Rest API client createTodo should create a new To-Do item 1`] = `
{
  "completed": false,
  "description": "Milk, bread, eggs, cheese",
  "id": "1",
  "ownerId": "user-1",
  "title": "Buy groceries",
}
`;

exports[`To-Do list Rest API client fetchTodos should fetch all To-Do items 1`] = `
[
  {
    "completed": false,
    "description": "Milk, bread, eggs, cheese",
    "id": "1",
    "ownerId": "user-1",
    "title": "Buy groceries",
  },
  {
    "completed": true,
    "description": "",
    "id": "2",
    "ownerId": "user-2",
    "title": "Do laundry",
  },
  {
    "completed": false,
    "description": "Fix leaky faucet in the bathroom",
    "id": "3",
    "ownerId": "user-3",
    "title": "Call plumber",
  },
]
`;

exports[`To-Do list Rest API client todoById should get a todo by its id 1`] = `
{
  "completed": false,
  "description": "Milk, bread, eggs, cheese",
  "id": "1",
  "ownerId": "user-1",
  "title": "Buy groceries",
}
`;

exports[`the pact file can be generated and match with the snapshot 1`] = `
{
  "consumer": {
    "name": "test-consumer",
  },
  "interactions": [
    {
      "description": "GET /todo-service/todos returns status 200",
      "request": {
        "body": null,
        "headers": {},
        "method": "GET",
        "path": "/todos",
        "query": "all=true",
      },
      "response": {
        "body": [
          {
            "completed": false,
            "description": "Milk, bread, eggs, cheese",
            "id": "1",
            "ownerId": "user-1",
            "title": "Buy groceries",
          },
          {
            "completed": true,
            "description": "",
            "id": "2",
            "ownerId": "user-2",
            "title": "Do laundry",
          },
          {
            "completed": false,
            "description": "Fix leaky faucet in the bathroom",
            "id": "3",
            "ownerId": "user-3",
            "title": "Call plumber",
          },
        ],
        "headers": {
          "content-type": "application/json",
        },
        "status": 200,
      },
    },
    {
      "description": "rest api returns a 500 http error",
      "providerState": "will return a 500 http error",
      "request": {
        "body": null,
        "headers": {},
        "method": "GET",
        "path": "/todos",
        "query": "all=true",
      },
      "response": {
        "body": null,
        "headers": {
          "content-type": "application/json",
        },
        "status": 500,
      },
    },
    {
      "description": "GET /todo-service/todos returns status 200 - 1",
      "request": {
        "body": null,
        "headers": {},
        "method": "GET",
        "path": "/todos",
        "query": "all=true",
      },
      "response": {
        "body": [],
        "headers": {
          "content-type": "application/json",
        },
        "status": 200,
      },
    },
    {
      "description": "POST /todo-service/todos returns status 201",
      "request": {
        "body": {
          "title": "Buy groceries",
        },
        "headers": {
          "content-type": "application/json",
        },
        "method": "POST",
        "path": "/todos",
        "query": undefined,
      },
      "response": {
        "body": {
          "completed": false,
          "description": "Milk, bread, eggs, cheese",
          "id": "1",
          "ownerId": "user-1",
          "title": "Buy groceries",
        },
        "headers": {
          "content-type": "application/json",
        },
        "status": 201,
      },
    },
    {
      "description": "should found a todo item by its id",
      "providerState": "there is an existing todo item with this id",
      "request": {
        "body": null,
        "headers": {},
        "method": "GET",
        "path": "/todos/1",
        "query": undefined,
      },
      "response": {
        "body": {
          "completed": false,
          "description": "Milk, bread, eggs, cheese",
          "id": "1",
          "ownerId": "user-1",
          "title": "Buy groceries",
        },
        "headers": {
          "content-type": "application/json",
        },
        "status": 200,
      },
    },
    {
      "description": "GET /todo-service/todos/1 returns status 404",
      "request": {
        "body": null,
        "headers": {},
        "method": "GET",
        "path": "/todos/1",
        "query": undefined,
      },
      "response": {
        "body": {
          "message": "The todo item 1 is not found",
        },
        "headers": {
          "content-type": "application/json",
        },
        "status": 404,
      },
    },
  ],
  "metadata": {
    "client": {
      "name": "pact-js-mock",
    },
    "pactSpecification": {
      "version": "2.0.0",
    },
  },
  "provider": {
    "name": "todo-service",
  },
}
`;
